--- a/views/spaces_new.erb
+++ b/views/spaces_new.erb
@@ -2,7 +2,6 @@
   <input type="text" name="name" placeholder="Name" />
   <input type="text" name="description" placeholder="Description" />
   <input type="text" name="price" placeholder="Price" />
-  <input type="text" name="start_date" placeholder="Start_Date" />
-  <input type="text" name="end_date" placeholder="End_Date" />
+  <input type="text" name="available_date" placeholder="Date Available" />
   <input type="submit" value="Submit" />
 </form>
