--- a/views/spaces.erb
+++ b/views/spaces.erb
@@ -15,6 +15,9 @@
       <li> Description: <%= space.description %> </li>
       <li> Price: <%= space.price %> </li>
       <li> Date Available: <%= space.available_date %> </li>
+      <form action="/spaces/<%= space.name %>" method="post">
+        <input type="submit" value= "Request" />
+      </form>  
       <% end %>
     </ul>
 
