request button working but test failing

--- a/views/spaces.erb
+++ b/views/spaces.erb
@@ -11,14 +11,16 @@
   <ul>
 
     <% @space.each do |space| %>
-      <li> Name : <%= space.name %> </li>
-      <li> Description: <%= space.description %> </li>
-      <li> Price: <%= space.price %> </li>
-      <li> Date Available: <%= space.available_date %> </li>
-      <form action="/spaces/<%= space.name %>" method="post">
-        <input type="submit" value= "Request" />
-      </form>  
+      <% if space.available %>
+        <li> Name : <%= space.name %> </li>
+        <li> Description: <%= space.description %> </li>
+        <li> Price: <%= space.price %> </li>
+        <li> Date Available: <%= space.available_date %> </li>
+        <form action="/spaces/<%= space.name %>" method="post">
+          <input type="submit" id=<%space.name%>value= "Request" />
+        </form>
       <% end %>
+    <% end %>
     </ul>
 
 </body>
