--- a/views/spaces.erb
+++ b/views/spaces.erb
@@ -17,7 +17,7 @@
         <li> Price: <%= space.price %> </li>
         <li> Date Available: <%= space.available_date %> </li>
         <form action="/spaces/<%= space.name %>" method="post">
-          <input type="submit" id=<%space.name%>value= "Request" />
+          <input type="submit" id="<%space.name%>" value= "Request" />
         </form>
       <% end %>
     <% end %>
